# SoPilot

./: .gitignore  CHANGELOG.md  GUIDE_INFERENCE_VALIDATION.md  GUIDE_SEGMENTATION.md  GUIDE_TRACKING.md  GUIDE_TRAINING_BENCHMARK.md  Makefile  README.md  SOUP.md  pyproject.toml
SoPilotMacApp/: .gitignore  Package.swift  build.sh
SoPilotMacApp/Resources/: Info.plist
SoPilotMacApp/Sources/SoPilotMacApp/: AppConfig.swift  LaunchView.swift  PythonRuntimeLocator.swift  SoupPackageValidator.swift  main.swift
doc/: Note1.1-kimi.md  Note1.2-claude.md  Note1.3-codex.md  PRD1.1-basic.md  PRD1.2-schema.md  PRD1.3-schemaV0.md  PRD2.0-lit.md  PRD2.1-lit-kimi.md  PRD2.2-lit-claude.md  PRD2.3-StandaloneSOUPEngine-Codex.md  PRD2.4-SoupYolo-test.md  PRD3.1-sopilot-p1.md  README-v2.md  Report2.3-SOUPEngineTest1.md  mobileAppDesign.md
doc/ADR/: archtecture-decision.md
doc/appPages/: p1-launch.html
doc/sandbox-doc/: Note1.4-SOUP-writeup.md  Note1.4-yolo1.md  testPRD1.4-YoloMlxMac.md  testPRD1.5-VLM-Mac.md  testPRD1.6-OrState-SOUP-engine.md  testPRD1.7-YoloVLM-hackVideo.md
sandbox/: test-camera.py  test-face-image.py  test-yolo-inference.py
sandbox/.claude/: settings.local.json
sandbox/macCamera/: .gitignore  FaceBoxDemo.dmg  Package.swift  build.sh  extract_frames.py
sandbox/macCamera/FaceBoxDemo.app/Contents/: Info.plist
sandbox/macCamera/Resources/: Info.plist  vlm_model_manager_cli.py  yolo_mlx_face_worker.py
sandbox/macCamera/Resources/Models/: README.md
sandbox/macCamera/Sources/FaceBoxDemo/: AppConfig.swift  AppLog.swift  CameraManager.swift  CameraPreview.swift  ContentView.swift  FaceDetector.swift  LocalVLMPanel.swift  PythonRuntimeLocator.swift  VLMModelService.swift  YoloMLXWorker.swift  main.swift
sandbox/soup-engine/: CHANGELOG.md  DEVELOPER.md  README.md  pyproject.toml  setup.py
sandbox/soup-engine/src/sopilot_rules/: __init__.py  engine.py  events.py  evidence.py  geometry.py  loader.py  normalizer.py  privacy.py  schema.py
sandbox/soup-engine/src/sopilot_rules/rules/: __init__.py  above.py  after_all_required.py  any_of.py  base.py  conditions.py  exists_before.py  near_before.py  overlap.py  vlm_answer.py
sandbox/soup-engine/src/sopilot_rules/tools/: __init__.py  rule_gen_cli.py  validate_soup.py
sandbox/soup-engine/tests/: __init__.py
sandbox/soup-engine/tests/fixtures/bp/: all_pass.json  bp_cuff_on_sleeve_quit.soup.json  bp_hack_vlm_crosscheck.soup.json  bp_monitor.soup.json  cuff_not_on_upper_arm.json  low_confidence_cuff.json  measure_too_early.json  missing_sleeve.json  multiple_good_frames.json  no_measure_event.json  sleeve_not_rolled.json
sandbox/soup-engine/tests/integration/: test_SOUP_bp_hack_vlm.py  test_SOUP_sleeve.py  test_bp_end_to_end.py
sandbox/soup-engine/tests/unit/: test_engine.py  test_events.py  test_evidence.py  test_geometry.py  test_loader.py  test_normalizer.py  test_privacy.py  test_rules_above.py  test_rules_after_all_required.py  test_rules_any_of.py  test_rules_conditions.py  test_rules_exists_before.py  test_rules_near_before.py  test_rules_overlap.py  test_rules_vlm_answer.py  test_schema.py  test_tools.py
scripts/: _mps_seg_perf_patch.py  _test_mps_seg_perf_patch.py  _vectorized_seg_loss.py  benchmark_yolo26_seg_collect_results.py  benchmark_yolo26_seg_generate_charts.py  benchmark_yolo26_seg_inference.py  benchmark_yolo26_seg_training_cpu.py  benchmark_yolo26_seg_training_mlx.py  benchmark_yolo26_seg_training_mps.py  benchmark_yolo26_training_mps.py  download_yolo26_models.sh  evaluate_coco_seg_val.py
src/yolo26mlx/: __init__.py  cli.py
src/yolo26mlx/converters/: convert.py
src/yolo26mlx/data/: coco_dataset.py
src/yolo26mlx/engine/: model.py  predictor.py  results.py  trainer.py
src/yolo26mlx/nn/: __init__.py  tasks.py
src/yolo26mlx/optim/: __init__.py  adamw.py
src/yolo26mlx/utils/: loss.py  metrics.py  ops.py
src/yolo26mlx/vlm/: __init__.py  chat.py  cli.py  manager.py
tests/: test_segmentation.py  test_segmentation_integration.py  test_vlm_chat.py  test_vlm_model_manager.py
(+9 files in other folders)
