# Copyright (c) 2026 webAI, Inc.

[build-system]
requires = ["setuptools>=61.0,<78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-mlx"
version = "0.3.1"
description = "YOLO26 implementation using Apple MLX framework"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    {name = "webAI Team"}
]
keywords = ["yolo", "object-detection", "object-tracking", "multi-object-tracking", "mlx", "apple-silicon", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.10"
dependencies = [
    # Upper bound on mlx: yolo26x-seg training reproducibly hangs on
    # mlx 0.31.x (kIOGPUCommandBufferCallbackError) within 2–5 epochs
    # despite the per-epoch ``mx.clear_cache()`` Metal-heap-fragmentation
    # fix in ``yolo26mlx.engine.trainer``. Smaller seg models (n/s/m/l)
    # and all detection workloads are unaffected, and the documented
    # 81.5 s/epoch x-seg baseline was measured under mlx 0.30.x — so the
    # supported floor is the same and the cap excludes only the broken
    # 0.31.x line.
    "mlx>=0.30.3,<0.31",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
tracking = [
    "opencv-python>=4.8.0",
    "lap>=0.5.0",
    "scipy>=1.11.0",
]
segment = [
    "pycocotools>=2.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
]
convert = [
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/thewebAI/yolo-mlx"
Documentation = "https://github.com/thewebAI/yolo-mlx#readme"
Repository = "https://github.com/thewebAI/yolo-mlx"
Changelog = "https://github.com/thewebAI/yolo-mlx/blob/main/CHANGELOG.md"

[project.scripts]
yolo-mlx = "yolo26mlx.cli:main"
yolomlx = "yolo26mlx.cli:main"
yolo26 = "yolo26mlx.cli:main"
yolo26mlx = "yolo26mlx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yolo26mlx = ["cfg/**/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_botsort.py" = ["E402"]
"tests/test_mot_metrics.py" = ["E402"]
"tests/test_tracking.py" = ["E402"]
"tests/test_segmentation.py" = ["E402"]
"tests/test_segmentation_integration.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]
