[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopilot-rules"
version = "0.1.0"
description = "Standalone deterministic SOUP rule engine for SoPilot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SoPilot Team"}
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
sopilot-validate-soup = "sopilot_rules.tools.validate_soup:main"
sopilot-rule-gen = "sopilot_rules.tools.rule_gen_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
